# papyrus

./: .drone.yml  .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  Makefile.in  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: testing.yml
benches/: 01_type_convert.rs  02_layer_operation.rs
docs/: layer.md  types.md
papyrus/benches/: 02_layer_operation.rs
papyrus/src/: cli.rs
papyrus/src/layers/file/: sstable.rs
papyrus/src/types/: traits.rs
revdb/: Cargo.toml
revdb/src/: cli.rs
src/: cli.rs  errors.rs  lib.rs  main.rs  papyrus.pest
src/features/: basic_io.feature  search.feature
src/features/files/: basic.yml
src/features/steps/: steps.py
src/layers/: mem.rs  mod.rs  traits.rs
src/layers/file/: file.rs  mod.rs  wal.rs
src/papyrus/: Cargo.toml  agent.py  cli.py  settings.py  storage.py
src/papyrus/benches/: 01_type_convert.rs
src/papyrus/cli/: __init__.py  agent.py  console.py
src/papyrus/cli/commands/: __init__.py  _base.py  dump_settings.py  list.py
src/papyrus/layers/: __init__.py  _base.py  mem.py
src/papyrus/layers/files/: __init__.py  _base.py  aol.py
src/papyrus/src/: errors.rs  papyrus.pest
src/papyrus/src/layers/file/: btree.rs
src/papyrus/types/: __init__.py  _base.py  data.py  key.py  value.py
src/revdb/: Cargo.toml  README.md
src/revdb/src/: builder.rs  errors.rs  lib.rs  main.rs  revdb.pest  settings.rs
src/tests/: conftest.py  test_layers.py  test_storage.py  test_types.py
src/tests/types/: test_key.py  test_value.py
src/types/: key.rs  mod.rs  pair.rs  traits.rs  value.rs
