[package]
name = "papyrus"
version = "0.1.0"
edition = "2021"
authors = ["cmj <cmj@cmj.tw>"]
description = "The embeddable, persistent, and revision storage."
readme = "README.md"
repository = "https://github.com/cmj0121/papyrus"
keywords = ["papyrus", "storage", "revision"]
exclude = ["src/features/*"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
