[package]
name = "papyrus"
version = "0.1.0"
edition = "2021"
authors = ["cmj <cmj@cmj.tw>"]
description = "The embeddable, persistent, and revision storage."
readme = "README.md"
repository = "https://github.com/cmj0121/papyrus"
keywords = ["papyrus", "storage", "revision"]
exclude = ["src/features/*"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.8", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
pest = "2.7.0"
pest_derive = "2.7.0"
rustyline = "12.0.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dev-dependencies]
paste = "1.0.12"
