[package]
name = "revdb"
version = "0.1.0"
edition = "2021"
authors = ["cmj <cmj@cmj.tw>"]
description = "The persistent and revision key-value storage."
readme = "README.md"
repository = "https://github.com/cmj0121/papyrus"
keywords = ["revdb", "storage", "revision"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.11"
clap-verbosity-flag = "2.0.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
